# fastapi_i18n

./: .gitignore  LICENSE  Readme.md  pyproject.toml  setup.cfg
