[metadata]
name = fastapi-i18n
version = 0.0.1.dev
url = https://github.com/maneldevs/fastapi_i18n
author = maneldevs
author_email = "maneldevs" maneldevs@gmail.com
description = Library to allow i18n in FastAPI. Manage translations in excepction messages, validation errors, python code and Jinja2 templates.
long_description = file: Readme.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir = 
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*